<resources>
    <string name="app_name">movieforChill</string>
    <string name="film_name">TextView</string>
    <string name="food">FRESH FOOD</string>
    <string name="delivery">FAST DELIVERY</string>
    <string name="payment">EASY PAYMENT</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="autorisation">Авторизация</string>
    <string name="movie_poster">movie_poster</string>
    <string name="movie">Топ фильмов</string>
    <string name="favourite_movie">Любимые фильмы</string>
    <string name="movie_detail">детали</string>
    <string name="account">Аккаунт</string>
    <string name="camera">Камера</string>
    <string name="upload_photo">Загрузить с галереи</string>
    <string name="image_of_avatars">image of avatars</string>
    <string name="map">Карта</string>
    <string name="actor_name">Имя актера</string>
    <string name="character">Роль актера</string>
    <string name="main_actors">В главных ролях</string>
</resources>