<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_first_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/movie"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_second_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favourite_movie"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/account_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
</menu>