<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/actor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/actor_name"
        android:gravity="center"
        android:textStyle="bold"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp">
        <ImageView
            android:id="@+id/actor_image"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_poster"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/character"
        android:gravity="center"
        android:textStyle="bold"
        />



</LinearLayout>