<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AccountFragment">

    <Button
        android:id="@+id/button_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_account"
        app:layout_constraintBottom_toTopOf="@id/button_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="389dp" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_camera"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="497dp" />

    <ImageView
        android:id="@+id/image_account"
        android:layout_width="500dp"
        android:layout_height="500dp"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintBottom_toTopOf="@id/button_camera"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/image_of_avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>